tests/invalid/when_fallback_return_type_mismatch.wio
fn ClampPositive(x: i32) -> i32 when (x > 0) else "oops" {
    return x;
}

fn Entry() -> i32 {
    return ClampPositive(5);
}
